prometheus/01-prometheus-ns_sa_rbac.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring
