prometheus/01-prometheus-pv_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring-system
---
