prometheus/02-prometheus-rbac 2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring-system
