prometheus/04-prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring
spec:
  selector:
    app: prometheus
  ports:
  - name: http-prometheus
    port: 9090
    protocol: TCP
    targetPort: 9090
  sessionAffinity: ClientIP
---
