prometheus/04-prometheus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
    component: server
  name: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroup: 2001
      serviceAccountName: prometheus
      containers:
      - name: prometheus-server
        image: prom/prometheus:latest
        ports:
        - name: http-prometheus
          containerPort: 9090
        volumeMounts:
        - name: config-file
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
        - name: storage-tsdb
          mountPath: /prometheus
      volumes:
      - name: config-file
        configMap:
          name: prometheus-config
      - name: storage-tsdb
        persistentVolumeClaim:
          claimName: prometheus-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: http-prometheus
  #externalTrafficPolicy: Local
  sessionAffinity: ClientIP
  #type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
