prometheus/05-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/part-of: monitoring-system
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.prometheus.svc.cluster.local
    secretName: prometheus-tls
  rules:
  - host: prometheus.prometheus.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
---
