prometheus/06-prometheus-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: prometheus
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-prom
      protocol: HTTP
    hosts:
    - "prometheus.app.example.id"
  - port:
      number: 443
      name: https-prom
      protocol: HTTPS
    tls:
      credentialName: prometheus-tls
      mode: SIMPLE
    hosts:
    - "prometheus.app.example.id"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hosts:
  - "prometheus.app.example.id"
  gateways:
  - prometheus-gateway
  http:
  - route:
    - destination:
        host: prometheus.prometheus.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus
  namespace: prometheus
spec:
  host: prometheus.prometheus.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
